--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,18 @@
   },
   "dependencies": {
     "@types/quill": "^2.0.10",
+    "axios": "^1.4.0",
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "socket.io-client": "^4.7.1"
+    "react-router-dom": "^6.14.2",
+    "socket.io-client": "^4.7.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
