--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/quill": "^2.0.10",
     "axios": "^1.4.0",
+    "html2canvas": "^1.4.1",
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
