--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@types/quill": "^2.0.10",
     "axios": "^1.4.0",
     "html2canvas": "^1.4.1",
+    "lodash": "^4.17.21",
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,6 +22,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.196",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/uuid": "^9.0.2",
