--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/quill": "^2.0.10",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
     "quill": "^1.3.7",
