--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,14 +1,15 @@
 # Use an official Node.js runtime as the base image
-FROM node:20.3.1
+FROM node:18.17.0
 
 # Set the working directory inside the container
 WORKDIR /app
 
 # Copy package.json and package-lock.json to the container
 COPY package*.json ./
+COPY yarn.lock ./
 
 # Install project dependencies
-RUN npm install
+RUN yarn
 
 # Copy the rest of the application code to the container
 COPY . .
@@ -17,4 +18,4 @@ COPY . .
 EXPOSE 5173
 
 # Command to run your application
-CMD ["npm","run", "dev"]
+CMD ["yarn","run", "dev"]
