--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
       dockerfile: Dockerfile
     ports:
       - 5173:5173
+    stdin_open: true
     container_name: client-container
     networks:
       - google-docs-network
@@ -27,18 +28,22 @@ services:
       - ./server:/app
     env_file:
       - ./server/.env
-    # depends_on:
-      # - mongoDB
+    depends_on:
+      - mongoDB
 
-  # mongoDB:
-  #   image: mongo
-  #   ports:
-  #     - 27017:27017
-  #   container_name: mongo-container
-  #   networks:
-  #     - mern-stack-network
-  #   volumes:
-  #     - mongoData:/
+  mongoDB: 
+    image: mongo
+    ports:
+      - 27017:27017
+    container_name: mongo-container
+    networks:
+      - google-docs-network
+    volumes:
+      - mongoData:/data/db
+    env_file:
+      - ./.env
 
 networks:
  google-docs-network:
+volumes:
+  mongoData:
