--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,16 +1,20 @@
 # Use an official Node.js runtime as the base image
-FROM node:20.3.1
+FROM node:18.17.0
 
 # Set the working directory inside the container
 WORKDIR /app
 
 # Copy package.json and package-lock.json to the container
 COPY package*.json ./
+COPY yarn.lock ./
 
 # Install project dependencies
-RUN npm install
-RUN npm uninstall bcrypt
-RUN npm i bcrypt
+RUN yarn
+# Hack to fix bcrypt error
+RUN yarn remove bcrypt
+RUN yarn add bcrypt
+RUN yarn remove nodemon
+RUN yarn add nodemon
 
 # Copy the rest of the application code to the container
 COPY . .
