--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,12 +4,17 @@ FROM node:18.17.0
 # Set the working directory inside the container
 WORKDIR /app
 
-# Copy package.json and package-lock.json to the container
+# Copy package.json and yarn.lock.json to the container
 COPY package*.json ./
-COPY yarn.lock ./
+# COPY yarn.lock ./
+# Copy vite.config.ts
+
+COPY vite.config.ts ./
 
 # Install project dependencies
 RUN yarn
+RUN yarn remove esbuild
+RUN yarn add esbuild
 
 # Copy the rest of the application code to the container
 COPY . .
