--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,9 +4,9 @@ services:
     build:
       context: "./client"
       dockerfile: Dockerfile
-    image: ${860675267363.dkr.ecr.us-east-1.amazonaws.com/googledocsrepository}/frontend:latest
+    # image: ${860675267363.dkr.ecr.us-east-1.amazonaws.com/googledocsrepository}/frontend:latest
     ports:
-      - 5173:5173
+      - 4173:4173
     stdin_open: true
     container_name: client-container
     networks:
@@ -20,7 +20,7 @@ services:
     build:
       context: "./server"
       dockerfile: Dockerfile
-    image: ${860675267363.dkr.ecr.us-east-1.amazonaws.com/googledocsrepository}/backend:latest
+    # image: ${860675267363.dkr.ecr.us-east-1.amazonaws.com/googledocsrepository}/backend:latest
     ports:
       - 4000:4000
     container_name: server-container
