--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,26 +1,31 @@
 # Use an official Node.js runtime as the base image
-FROM node:18.17.0
+FROM node:18.17.0 AS build
 
 # Set the working directory inside the container
 WORKDIR /app
 
 # Copy package.json and yarn.lock.json to the container
 COPY package*.json ./
-# COPY yarn.lock ./
-# Copy vite.config.ts
 
 COPY vite.config.ts ./
 
 # Install project dependencies
 RUN yarn
-# RUN yarn remove esbuild
-# RUN yarn add esbuild
 
 # Copy the rest of the application code to the container
 COPY . .
 
+RUN npm run build
+
+# 2nd Part
+
+FROM nginx
+
 # Expose the port your application will run on
 EXPOSE 4173
 
-# Command to run your application
-CMD ["yarn","run", "build"]
+# Copying custom config file to nginx
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+
+# Copying all the files from dist folder to nginx
+COPY --from=build /app/dist /usr/share/nginx/html
