--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -1,8 +1,9 @@
 server{
     listen 4173;
     
-    location /{
-        root /urs/share/nginx/html;
-        index index.html index.html
+    location / {
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+        try_files $uri $uri/ /index.html;
     }
 }
