--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,14 @@ services:
       dockerfile: Dockerfile
     ports:
       - 80:80
+    depends_on:
+      - client
+      - api
+    restart: always
+    # networks:
+    #   - google-docs-network
 
-  frontend:
+  client:
     build:
       context: "./client"
       dockerfile: Dockerfile
@@ -16,26 +22,26 @@ services:
     #   - 4173:4173
     stdin_open: true
     container_name: client-container
-    networks:
-      - google-docs-network
+    # networks:
+    #   - google-docs-network
     volumes:
       - ./client:/app
     depends_on:
-      - backend
+      - api
 
-  backend:
+  api:
     build:
       context: "./server"
       dockerfile: Dockerfile
     # ports:
     #   - 4000:4000
     container_name: server-container
-    networks:
-      - google-docs-network
+    # networks:
+    #   - google-docs-network
     volumes:
       - ./server:/app
     env_file: 
       - ./server/.env
 
-networks:
-  google-docs-network:
+# networks:
+#   google-docs-network:
