--- a/nginx/configs/default.conf
+++ b/nginx/configs/default.conf
@@ -1,21 +1,29 @@
-upstream backend{
-    server backend:4000;
+upstream api{
+    server api:4000;
 }
 
 upstream client{
-    server frontend:4173;
+    server client:4173;
 }
 
 server{
     listen 80;
 
-    location /backend{
+    location /api{
         # removing backend prefix from the request url
-        rewrite /api(.*) /$1 break;
+        # rewrite /api/(.*) /$1 break;
         proxy_pass http://api;
     }
 
     location /{
         proxy_pass http://client;
     }
+
+    location /sockjs-node {
+        proxy_pass http://client;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+    }
+
 }
