--- a/nginx/configs/default.conf
+++ b/nginx/configs/default.conf
@@ -6,24 +6,26 @@ upstream client{
     server client:4173;
 }
 
+
 server{
     listen 80;
 
     location /api{
-        # removing backend prefix from the request url
-        # rewrite /api/(.*) /$1 break;
         proxy_pass http://api;
     }
 
     location /{
-        proxy_pass http://client;
+      proxy_pass http://client;      
     }
 
-    location /sockjs-node {
-        proxy_pass http://client;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-    }
+    location /api/socket.io/{
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
 
+      proxy_pass http://api;
+
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+    }
 }
