--- a/nginx/configs/default.conf
+++ b/nginx/configs/default.conf
@@ -18,7 +18,7 @@ server{
       proxy_pass http://client;      
     }
 
-    location /api/socket.io/{
+    location /socket.io{
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
 
@@ -27,5 +27,6 @@ server{
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "upgrade";
+      proxy_set_header X-Real-IP $remote_addr;
     }
 }
