--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,31 +27,31 @@ jobs:
         run: echo "Running unit tests"
         # Add the commands to run your unit tests here.
 
-  build-and-push-ecr-image:
-    name: Build and Push to ECR
-    needs: integration
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
+  # build-and-push-ecr-image:
+  #   name: Build and Push to ECR
+  #   needs: integration
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout Code
+  #       uses: actions/checkout@v2
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+  #     - name: Configure AWS credentials
+  #       uses: aws-actions/configure-aws-credentials@v1
+  #       with:
+  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
 
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+  #     - name: Login to Amazon ECR
+  #       id: login-ecr
+  #       uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build and tag Docker images
-        run: |
-          # Build Docker containers and tag them.
-          docker compose -f D:\Projects\Google docs clone\docker-compose.yaml build
+  #     - name: Build and tag Docker images
+  #       run: |
+  #         # Build Docker containers and tag them.
+  #         docker compose -f D:\Projects\Google docs clone\docker-compose.yaml build
 
-      - name: Push Docker images to Amazon ECR
-        run: |
-          # Push the Docker images to Amazon ECR.
-          docker compose -f D:\Projects\Google docs clone\docker-compose.yaml push
+  #     - name: Push Docker images to Amazon ECR
+  #       run: |
+  #         # Push the Docker images to Amazon ECR.
+  #         docker compose -f D:\Projects\Google docs clone\docker-compose.yaml push
