--- a/server/package.json
+++ b/server/package.json
@@ -5,23 +5,27 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "tsc && node ./dist/server.js",
+    "dev": "tsc && node ./dist/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.9.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
     "node-pre-gyp": "^0.17.0",
     "socket.io": "^4.7.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@types/node": "^20.8.7",
+    "nodemon": "^3.0.1",
+    "typescript": "^5.2.2"
   }
 }
