--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.9.4",
+    "@apollo/subgraph": "^2.5.6",
+    "apollo-server-express": "^3.12.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
