--- a/server/package.json
+++ b/server/package.json
@@ -12,14 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/server": "^4.9.4",
-    "@apollo/subgraph": "^2.5.6",
     "apollo-server-express": "^3.12.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
+    "graphql-scalars": "^1.22.4",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
     "node-pre-gyp": "^0.17.0",
