--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.5",
     "apollo-server-express": "^3.12.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
