--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.9.5",
+    "@graphql-tools/schema": "^10.0.2",
     "@types/bcryptjs": "^2.4.5",
     "apollo-server-express": "^3.12.1",
     "bcryptjs": "^2.4.3",
@@ -23,10 +24,12 @@
     "express": "^4.18.2",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.22.4",
+    "graphql-ws": "^5.14.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
     "node-pre-gyp": "^0.17.0",
-    "socket.io": "^4.7.1"
+    "socket.io": "^4.7.1",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
