--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.22.4",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.14.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
