--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
+    "graphql-ws": "^5.14.2",
     "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
     "quill": "^1.3.7",
