--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:migrate": "npx prisma migrate",
+    "db:generate": "npx prisma generate",
+    "db:run": "db:migrate && db:generate"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
@@ -39,7 +42,6 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "html2canvas": "^1.4.1",
-    "jose": "^5.6.3",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.400.0",
