--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "db:migrate": "npx prisma migrate",
     "db:generate": "npx prisma generate",
-    "db:run": "db:migrate && db:generate"
+    "db:run": "npm run db:migrate && npm run db:generate",
+    "install:prod": "npm i && npm run db:run"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
