--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "db:migrate": "npx prisma migrate",
     "db:generate": "npx prisma generate",
     "db:run": "npm run db:migrate && npm run db:generate",
-    "install:prod": "npm i && npm run db:run"
-  },
+    "start:socket-server": "node ./socket-server/server.js",
+    "install:prod": "npm i && npm run db:run && start:socket-server"
+ },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
     "@hocuspocus/provider": "^2.13.5",
@@ -64,11 +65,16 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
+    "yjs": "^13.6.18",
     "y-prosemirror": "^1.2.12",
     "y-webrtc": "^10.3.0",
     "y-websocket": "^2.0.4",
-    "yjs": "^13.6.18",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "lib0": "^0.2.97",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
+    "ws": "^8.18.0",
+    "y-protocols": "^1.0.6"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
