Formatting && Code changes

--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "db:migrate": "npx prisma migrate",
     "db:generate": "npx prisma generate",
-    "db:run": "npm run db:migrate && npm run db:generate",
-    "install:prod": "npm i && npm run db:run"
- },
+    "db:run": "yarn run db:migrate && yarn run db:generate",
+    "install:prod": "yarn && yarn run db:run"
+  },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
     "@hocuspocus/provider": "^2.13.5",
@@ -50,11 +52,14 @@
     "jose": "^5.6.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "lib0": "^0.2.97",
     "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.400.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "prettier": "^3.3.3",
     "react": "^18",
     "react-colorful": "^5.6.1",
     "react-dom": "^18",
@@ -64,16 +69,13 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
-    "yjs": "^13.6.18",
+    "ws": "^8.18.0",
     "y-prosemirror": "^1.2.12",
+    "y-protocols": "^1.0.6",
     "y-webrtc": "^10.3.0",
     "y-websocket": "^2.0.4",
-    "zod": "^3.23.8",
-    "lib0": "^0.2.97",
-    "lodash": "^4.17.21",
-    "lodash.debounce": "^4.0.8",
-    "ws": "^8.18.0",
-    "y-protocols": "^1.0.6"
+    "yjs": "^13.6.18",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
