--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.5.0",
     "html2canvas": "^1.4.1",
     "jose": "^5.6.3",
     "jsonwebtoken": "^9.0.2",
@@ -66,7 +67,7 @@
     "react-hook-form": "^7.52.1",
     "sharp": "^0.33.4",
     "sonner": "^1.5.0",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
     "ws": "^8.18.0",
