--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         run: npm install
 
       - name: Lint code
-        run: npm run lint:chec
+        run: npm run lint:check
 
       - name: Check Formatting
         run: npm run format:check
