--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@tiptap/react": "^2.4.0",
     "@tiptap/starter-kit": "^2.4.0",
     "@types/jsonwebtoken": "^9.0.6",
+    "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
