--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.0",
     "html2canvas": "^1.4.1",
+    "input-otp": "^1.2.4",
     "jose": "^5.6.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
@@ -63,6 +64,7 @@
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "otp-generator": "^4.0.1",
     "prettier": "^3.3.3",
     "react": "^18",
     "react-colorful": "^5.6.1",
