--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "^5.16.2",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
@@ -31,6 +32,7 @@
     "@react-email/components": "^0.0.25",
     "@tanstack/react-query": "^5.50.1",
     "@tanstack/react-query-devtools": "^5.50.1",
+    "@tiptap/extension-bubble-menu": "^2.8.0",
     "@tiptap/extension-collaboration": "^2.6.2",
     "@tiptap/extension-collaboration-cursor": "^2.6.2",
     "@tiptap/extension-color": "^2.4.0",
