--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "@google/generative-ai": "^0.21.0",
     "@hocuspocus/provider": "^2.13.5",
     "@prisma/client": "^5.16.2",
     "@radix-ui/react-avatar": "^1.1.0",
