--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "@google/generative-ai": "^0.21.0",
     "@hocuspocus/provider": "^2.13.5",
+    "@lexical/react": "^0.22.0",
+    "@lexical/yjs": "^0.22.0",
     "@prisma/client": "^5.16.2",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -59,6 +61,8 @@
     "jose": "^5.6.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "lenis": "^1.1.18",
+    "lexical": "^0.22.0",
     "lib0": "^0.2.97",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
@@ -68,9 +72,9 @@
     "next-themes": "^0.3.0",
     "otp-generator": "^4.0.1",
     "prettier": "^3.3.3",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-colorful": "^5.6.1",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "resend": "^4.0.0",
     "sharp": "^0.33.4",
@@ -82,8 +86,8 @@
     "y-prosemirror": "^1.2.12",
     "y-protocols": "^1.0.6",
     "y-webrtc": "^10.3.0",
-    "y-websocket": "^2.0.4",
-    "yjs": "^13.6.18",
+    "y-websocket": "^2.1.0",
+    "yjs": "^13.6.21",
     "zod": "^3.23.8"
   },
   "devDependencies": {
